# TVProgramFetcher

./: Cargo.toml  config.toml
.devcontainer/: devcontainer.json
.github/workflows/: cronjob.yml
src/: api.rs  lib.rs  main.rs
