[package]
name = "tvprogramfetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTPリクエスト用（非同期対応）
reqwest = { version = "0.12.20", features = ["json"] }

# JSONデシリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 非同期ランタイム（Tokio）
tokio = { version = "1.37", features = ["full"] }

# .envファイル対応（任意）
dotenv = "0.15.0"

toml = "0.8"

#日付管理
chrono = "0.4"

#API
axum = "0.8.4"